# mct443_ws

./: .gitignore
src/mct443_sim/: package.xml  setup.cfg  setup.py
src/mct443_sim/launch/: spawn_robot.launch.py  spawn_robot_launch2.py
src/mct443_sim/mct443_sim/: drive_10m.py  drive_10m_omega.py  lane_follow_node.py  lidar_debug.py
src/mct443_sim/models/simple_robot/: model.config  model.sdf
src/mct443_sim/urdf/: simple_robot.urdf
src/mct443_sim/worlds/: corridor_world.sdf  corridor_world_1.sdf
