[metadata]
name = mct443_sim
version = 0.0.0
author = Your Name
author_email = you@example.com
description = MCT443 lane keeping simulation
license = MIT

[options]
packages = find:
install_requires =
    setuptools
zip_safe = false

[options.entry_points]
console_scripts =
    # we'll add Python nodes here later
    # example: my_node = mct443_sim.my_node:main

[options.data_files]
    share/ament_index/resource_index/packages =
        resource/mct443_sim
    share/mct443_sim =
        package.xml
    share/mct443_sim/launch =
        launch/spawn_robot.launch.py

[develop]
script_dir=$base/lib/mct443_sim
[install]
install_scripts=$base/lib/mct443_sim

